src/objects/Publication__c.object
<CustomObject>
    <fields>
        <fullName>Active_Date__c</fullName>
        <label>Active Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Available_For_Vendor_Subscriptions__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Available For Vendor Subscriptions</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Commission_Rate_Fri__c</fullName>
        <label>Commission Rate Fri</label>
        <precision>13</precision>
        <scale>4</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Commission_Rate_Mon__c</fullName>
        <label>Commission Rate Mon</label>
        <precision>13</precision>
        <scale>4</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Commission_Rate_PHD__c</fullName>
        <label>Commission Rate PHD</label>
        <precision>13</precision>
        <scale>4</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Commission_Rate_PHE__c</fullName>
        <label>Commission Rate PHE</label>
        <precision>13</precision>
        <scale>4</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Commission_Rate_PHW__c</fullName>
        <label>Commission Rate PHW</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Commission_Rate_Sat__c</fullName>
        <label>Commission Rate Sat</label>
        <precision>13</precision>
        <scale>4</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Commission_Rate_Special_Fri__c</fullName>
        <label>Commission Rate (Special) Fri</label>
        <precision>13</precision>
        <scale>4</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Commission_Rate_Special_Mon__c</fullName>
        <label>Commission Rate (Special) Mon</label>
        <precision>13</precision>
        <scale>4</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Commission_Rate_Special_PHD__c</fullName>
        <label>Commission Rate (Special) PHD</label>
        <precision>13</precision>
        <scale>4</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Commission_Rate_Special_PHE__c</fullName>
        <label>Commission Rate (Special) PHE</label>
        <precision>13</precision>
        <scale>4</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Commission_Rate_Special_PHW__c</fullName>
        <label>Commission Rate (Special) PHW</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Commission_Rate_Special_Sat__c</fullName>
        <label>Commission Rate (Special) Sat</label>
        <precision>13</precision>
        <scale>4</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Commission_Rate_Special_Sun__c</fullName>
        <label>Commission Rate (Special) Sun</label>
        <precision>13</precision>
        <scale>4</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Commission_Rate_Special_Thu__c</fullName>
        <label>Commission Rate (Special) Thu</label>
        <precision>13</precision>
        <scale>4</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Commission_Rate_Special_Tue__c</fullName>
        <label>Commission Rate (Special) Tue</label>
        <precision>13</precision>
        <scale>4</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Commission_Rate_Special_Wed__c</fullName>
        <label>Commission Rate (Special) Wed</label>
        <precision>13</precision>
        <scale>4</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Commission_Rate_Sun__c</fullName>
        <label>Commission Rate Sun</label>
        <precision>13</precision>
        <scale>4</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Commission_Rate_Thu__c</fullName>
        <label>Commission Rate Thu</label>
        <precision>13</precision>
        <scale>4</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Commission_Rate_Tue__c</fullName>
        <label>Commission Rate Tue</label>
        <precision>13</precision>
        <scale>4</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Commission_Rate_Wed__c</fullName>
        <label>Commission Rate Wed</label>
        <precision>13</precision>
        <scale>4</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Cover_Price_Fri__c</fullName>
        <label>Cover Price Fri</label>
        <precision>11</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Cover_Price_Mon__c</fullName>
        <label>Cover Price Mon</label>
        <precision>11</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Cover_Price_PHD__c</fullName>
        <label>Cover Price PHD</label>
        <precision>11</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Cover_Price_PHE__c</fullName>
        <label>Cover Price PHE</label>
        <precision>11</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Cover_Price_PHW__c</fullName>
        <label>Cover Price PHW</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Cover_Price_Sat__c</fullName>
        <label>Cover Price Sat</label>
        <precision>11</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Cover_Price_Sun__c</fullName>
        <label>Cover Price Sun</label>
        <precision>11</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Cover_Price_Thu__c</fullName>
        <label>Cover Price Thu</label>
        <precision>11</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Cover_Price_Tue__c</fullName>
        <label>Cover Price Tue</label>
        <precision>11</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Cover_Price_Wed__c</fullName>
        <label>Cover Price Wed</label>
        <precision>11</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Delivery_Rate_Fee__c</fullName>
        <label>Delivery Rate/Fee?</label>
        <picklist>
            <picklistValues>
                <fullName>Rate</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Fee</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Direct_Sub_Delivery_Method__c</fullName>
        <label>Direct Sub Delivery Method</label>
        <picklist>
            <picklistValues>
                <fullName>Vendor</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Mailing Agent</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Vendor or Mailing Agent</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Direct_Sub_Mailing_Agent__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Direct Sub Mailing Agent</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Publications (Direct Sub Mailing Agent)</relationshipLabel>
        <relationshipName>Direct_Sub_Mailing_Agent_Publications</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Earliest_Start_Date__c</fullName>
        <label>Earliest Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Expiry_Date__c</fullName>
        <label>Expiry Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Free_Publication__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Free Publication</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Frequency_Code__c</fullName>
        <label>Frequency Code</label>
        <length>1</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Has_Sunday_Pub__c</fullName>
        <description>Field indicator if publication has Sunday publication</description>
        <formula>NOT(ISBLANK( Sunday_Publication__c ))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Has Sunday Pub</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Insert_Rate__c</fullName>
        <label>Insert Rate</label>
        <precision>12</precision>
        <scale>3</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Insertion__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Insertion?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Language_Medium__c</fullName>
        <label>Language Medium</label>
        <picklist>
            <picklistValues>
                <fullName>E</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>C</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>M</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>T</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>O</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Migration_Code__c</fullName>
        <label>Migration Code</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Online_Publication__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Online Publication</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Pagination__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Pagination?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Platform_Type__c</fullName>
        <label>Platform Type</label>
        <picklist>
            <picklistValues>
                <fullName>Print</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Online</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Tablet</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Smartphone</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>All in One (AIO)</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Product_Category__c</fullName>
        <label>Product Category</label>
        <picklist>
            <picklistValues>
                <fullName>Print</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Magazine</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Digital</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>All in One (AIO)</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Product_Family_Lookup__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Product Family</label>
        <referenceTo>Product_Family__c</referenceTo>
        <relationshipLabel>Publications</relationshipLabel>
        <relationshipName>Publications</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Product_Family__c</fullName>
        <label>Product Family</label>
        <length>5</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Public_Holiday_Weekday_Pub_Indicator__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Public Holiday (Weekday) Pub Indicator</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Public_Holiday_Weekend_Pub_Indicator__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Public Holiday (Weekend) Pub Indicator</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Publication_Code__c</fullName>
        <externalId>true</externalId>
        <label>Publication Code</label>
        <length>4</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Publication_Next_Start_Date__c</fullName>
        <label>Publication Next Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Publication_Platform_AIO__c</fullName>
        <label>Publication Platform (AIO)</label>
        <picklist>
            <controllingField>Platform_Type__c</controllingField>
            <picklistValues>
                <fullName>Online</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Smartphone</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Tablet</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Publication_Type__c</fullName>
        <description>[KCampang 9162014] Created for Stop Subscription based on QL-292 File: Publication Table v0.5</description>
        <label>Publication Type</label>
        <length>1</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Publish_Pattern__c</fullName>
        <label>Publish Pattern</label>
        <picklist>
            <picklistValues>
                <fullName>Weekdays</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Weekends</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MWF</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>TTh</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Published_Days__c</fullName>
        <label>Published Days</label>
        <length>7</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Publisher_Code__c</fullName>
        <label>Publisher Code</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sph_Publication_Indicator__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Sph Publication Indicator</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Sunday_Publication__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Sunday Publication</label>
        <referenceTo>Publication__c</referenceTo>
        <relationshipLabel>Publications</relationshipLabel>
        <relationshipName>Publications</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Vendor_Sub_Delivery_Method__c</fullName>
        <label>Vendor Sub Delivery Method</label>
        <picklist>
            <picklistValues>
                <fullName>Vendor</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Mailing Agent</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Vendor or Mailing Agent</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Vendor_Sub_Mailing_Agent__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Vendor Sub Mailing Agent</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Publications (Vendor Sub Mailing Agent)</relationshipLabel>
        <relationshipName>Vendor_Sub_Mailing_Agent_Publications</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Publication</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Publication_Code__c</columns>
        <columns>Platform_Type__c</columns>
        <columns>Publication_Next_Start_Date__c</columns>
        <columns>Earliest_Start_Date__c</columns>
        <columns>Direct_Sub_Delivery_Method__c</columns>
        <columns>Vendor_Sub_Delivery_Method__c</columns>
        <columns>Product_Family__c</columns>
        <columns>Product_Category__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>Frequency_Code__c</columns>
        <columns>LAST_UPDATE</columns>
        <columns>Published_Days__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Publication Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Publications</pluralLabel>
    <sharingModel>Read</sharingModel>
    <validationRules>
        <fullName>Earliest_Start_Date_Validation</fullName>
        <active>true</active>
        <description>Earliest Start Date must be a future date.</description>
        <errorConditionFormula>AND(Earliest_Start_Date__c &lt;= TODAY(),$User.Validation_Exempted__c &lt;&gt; TRUE)</errorConditionFormula>
        <errorDisplayField>Earliest_Start_Date__c</errorDisplayField>
        <errorMessage>Earliest Start Date must must be a future date.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>NOrYOnly</fullName>
        <active>true</active>
        <description>Validation Rule will fire error message if the user inputted characters other than N or Y in the &quot;Published Days&quot; field. Also, the value should total 7 characters.</description>
        <errorConditionFormula>NOT(REGEX(Published_Days__c, &quot;[NY][NY][NY][NY][NY][NY][NY]&quot;))</errorConditionFormula>
        <errorDisplayField>Published_Days__c</errorDisplayField>
        <errorMessage>Exactly 7 characters, consisting of either &quot;N&quot; or &quot;Y&quot; only, are permitted for this field.</errorMessage>
    </validationRules>
</CustomObject>